test/bad/lambdas/lambda06.px

func f(g: Int->Char->Int) def
    return

f(_+_)
